# chatbot-backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  railway.json
app/: config.py  lifecycle.py  logging.py  main.py
app/api/v1/: router.py
app/api/v1/chat/: __init__.py  endpoints.py  router.py
app/infrastructure/: __init__.py
app/infrastructure/agents/: __init__.py
app/infrastructure/agents/uninassau/: __init__.py  graph.py  prompts.py  rag.py  tools.py
app/schemas/: chat.py
knowledge_base/: contato.md  cursos.md  financeiro.md  institucional.md  vestibular.md
